updated forcing generation and loading code

--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "forcing.storage_dir\n",
+    "forcing.directory\n",
     "# path to forcing output (content of the work dir of the esmvaltool output)\n",
     "\n",
     "forcing.start_time\n",
@@ -175,6 +175,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bd6099b",
+   "metadata": {},
+   "source": [
+    "### Example Yaml file with forcing metadata\n",
+    "\n",
+    "```yaml\n",
+    "target_model: wflow \n",
+    "start_time: 2021-05-07T13:32:00Z\n",
+    "end_time: 2021-12-31T23:59:59Z\n",
+    "\n",
+    "#relative to (and inside) directory of this yaml file\n",
+    "shape: shapefile.shp\n",
+    "model_specific_forcing_info:\n",
+    "  # relative to this directory\n",
+    "  forcing_filename: some-filename.nc\n",
+    "  temperature-variable-name: TEMP\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da5e3d20",
    "metadata": {},
    "source": [
@@ -192,15 +213,23 @@
    "source": [
     "import ewatercycle.forcing\n",
     "\n",
-    "forcing = ewatercycle.forcing.load(\n",
+    "#load an existing forcing that was generated manually by some scientist from Deltares\n",
+    "forcing = ewatercycle.forcing.load_external(\n",
     "    #location on the file system where the output can be found\n",
     "    directory='/path/to/forcing/output/',\n",
     "    target_model='wflow', \n",
-    "    model_specific_options = {\n",
+    "    start_time='2021-05-07T13:32:00Z'\n",
+    "    model_specific_forcing_info = {\n",
     "        'forcing_filename' : 'some-filename.nc', # relative to forcing directory\n",
     "        'temperature-variable-name': 'TEMP'\n",
     "    },\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "#fetch an existing forcing that was generated with generate\n",
+    "forcing = ewatercycle.forcing.load(\n",
+    "    #location on the file system where the output can be found (no other options here)\n",
+    "    directory='/path/to/forcing/output/'\n",
+    ")"
    ]
   },
   {
