Re-organize forcing module into one file per model; add wflow forcing class; add more options to initialize forcing classes

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c60128f4",
+   "id": "b07e82e0",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1118bf92",
+   "id": "5e5b47d9",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1fdf19",
+   "id": "2f175976",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed73248",
+   "id": "d634ee60",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d368d06",
+   "id": "90f479f9",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a68ecea4",
+   "id": "1ddd912b",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e2dd38d",
+   "id": "848e4634",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2e14dea5",
+   "id": "8128a711",
    "metadata": {},
    "outputs": [
     {
@@ -144,19 +144,32 @@
     }
    ],
    "source": [
-    "forcing = ewatercycle.models.wflow.WflowForcing(\n",
-    "    netcdfinput = '../test_forcing_data.nc',\n",
-    "    Precipitation = \"/P\", \n",
-    "    EvapoTranspiration = \"/PET\", \n",
-    "    Temperature = \"/TEMP\",\n",
-    ")\n",
+    "from ewatercycle.forcing import Forcing\n",
+    "forcing = ewatercycle.forcing.load(\n",
+    "    target_model = \"wflow\",\n",
+    "    directory = \"../sample/forcing/data/\",\n",
+    "    model_specific_options = dict(\n",
+    "        filename = \"forcing_data.nc\"\n",
+    "#         Precipitation = \"/P\", \n",
+    "#         EvapoTranspiration = \"/PET\", \n",
+    "#         Temperature = \"/TEMP\",\n",
+    "))\n",
+    "\n",
+    "forcing = ewatercycle.forcing.load(\n",
+    "    target_model = \"pcrglobwb\",\n",
+    "    directory = \"../sample/forcing\",\n",
+    "    model_specific_options = dict(\n",
+    "        temperatureNC = 'temperature.nc',\n",
+    "        precipitationNC = 'precipitation.nc',\n",
+    "))\n",
+    "\n",
     "forcing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6faa85a0",
+   "id": "d96d5b09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0278b57f",
+   "id": "bd919900",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a964e937",
+   "id": "90768477",
    "metadata": {
     "tags": []
    },
@@ -251,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8d94b71d",
+   "id": "3700892b",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1f5e595",
+   "id": "6d68a1f5",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc9e59e",
+   "id": "161733d9",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -351,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "93035ca5",
+   "id": "8a073737",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85e297f5",
+   "id": "3bf8b4db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "85234ff9",
+   "id": "c422e279",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bf0453bf",
+   "id": "156bd986",
    "metadata": {
     "tags": []
    },
@@ -872,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0ce05438",
+   "id": "c72c3e9f",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d3c45ba",
+   "id": "85852d0d",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8cf3c18c",
+   "id": "c8168e60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ab107c7b",
+   "id": "f6a5b95f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5db7eeec",
+   "id": "a7301d1b",
    "metadata": {},
    "outputs": [],
    "source": []
