Revert to state before refactoring the forcing

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b07e82e0",
+   "id": "c60128f4",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e5b47d9",
+   "id": "1118bf92",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f175976",
+   "id": "2b1fdf19",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d634ee60",
+   "id": "7ed73248",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f479f9",
+   "id": "6d368d06",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ddd912b",
+   "id": "a68ecea4",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "848e4634",
+   "id": "5e2dd38d",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8128a711",
+   "id": "2e14dea5",
    "metadata": {},
    "outputs": [
     {
@@ -144,32 +144,19 @@
     }
    ],
    "source": [
-    "from ewatercycle.forcing import Forcing\n",
-    "forcing = ewatercycle.forcing.load(\n",
-    "    target_model = \"wflow\",\n",
-    "    directory = \"../sample/forcing/data/\",\n",
-    "    model_specific_options = dict(\n",
-    "        filename = \"forcing_data.nc\"\n",
-    "#         Precipitation = \"/P\", \n",
-    "#         EvapoTranspiration = \"/PET\", \n",
-    "#         Temperature = \"/TEMP\",\n",
-    "))\n",
-    "\n",
-    "forcing = ewatercycle.forcing.load(\n",
-    "    target_model = \"pcrglobwb\",\n",
-    "    directory = \"../sample/forcing\",\n",
-    "    model_specific_options = dict(\n",
-    "        temperatureNC = 'temperature.nc',\n",
-    "        precipitationNC = 'precipitation.nc',\n",
-    "))\n",
-    "\n",
+    "forcing = ewatercycle.models.wflow.WflowForcing(\n",
+    "    netcdfinput = '../test_forcing_data.nc',\n",
+    "    Precipitation = \"/P\", \n",
+    "    EvapoTranspiration = \"/PET\", \n",
+    "    Temperature = \"/TEMP\",\n",
+    ")\n",
     "forcing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d96d5b09",
+   "id": "6faa85a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bd919900",
+   "id": "0278b57f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "90768477",
+   "id": "a964e937",
    "metadata": {
     "tags": []
    },
@@ -264,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3700892b",
+   "id": "8d94b71d",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6d68a1f5",
+   "id": "c1f5e595",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "161733d9",
+   "id": "7cc9e59e",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -364,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8a073737",
+   "id": "93035ca5",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3bf8b4db",
+   "id": "85e297f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c422e279",
+   "id": "85234ff9",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "156bd986",
+   "id": "bf0453bf",
    "metadata": {
     "tags": []
    },
@@ -885,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c72c3e9f",
+   "id": "0ce05438",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "85852d0d",
+   "id": "5d3c45ba",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c8168e60",
+   "id": "8cf3c18c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f6a5b95f",
+   "id": "ab107c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7301d1b",
+   "id": "5db7eeec",
    "metadata": {},
    "outputs": [],
    "source": []
