Make wflow notebook work with new forcing module

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c60128f4",
+   "id": "3369caeb",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1118bf92",
+   "id": "9983ad5b",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1fdf19",
+   "id": "bea159a3",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed73248",
+   "id": "d952e026",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d368d06",
+   "id": "8b545f93",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a68ecea4",
+   "id": "3006f3e5",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "('2019.1', '2020.1.1')"
+       "'2020.1.1'"
       ]
      },
      "execution_count": 1,
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e2dd38d",
+   "id": "86ba92c6",
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +129,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2e14dea5",
+   "id": "06d490c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WflowForcing(netcdfinput=PosixPath('/home/peter/ewatercycle/ewatercycle/test_forcing_data.nc'), Precipitation='/P', EvapoTranspiration='/PET', Temperature='/TEMP', Inflow=None)"
+       "WflowForcing(start_time='1991-01-01T00:00:00Z', end_time='1991-12-31T00:00:00Z', directory='.', shape=None, netcdfinput=PosixPath('/home/peter/ewatercycle/ewatercycle/test_forcing_data.nc'), Precipitation='/P', EvapoTranspiration='/PET', Temperature='/TEMP', Inflow=None)"
       ]
      },
      "execution_count": 3,
@@ -144,11 +144,17 @@
     }
    ],
    "source": [
-    "forcing = ewatercycle.models.wflow.WflowForcing(\n",
-    "    netcdfinput = '../test_forcing_data.nc',\n",
-    "    Precipitation = \"/P\", \n",
-    "    EvapoTranspiration = \"/PET\", \n",
-    "    Temperature = \"/TEMP\",\n",
+    "import ewatercycle.forcing\n",
+    "forcing = ewatercycle.forcing.load_foreign(\n",
+    "    target_model = 'wflow',\n",
+    "    start_time = '1991-01-01T00:00:00Z',\n",
+    "    end_time = '1991-12-31T00:00:00Z',\n",
+    "    forcing_info = dict(\n",
+    "        netcdfinput = '../test_forcing_data.nc',\n",
+    "        Precipitation = \"/P\",\n",
+    "        EvapoTranspiration = \"/PET\",\n",
+    "        Temperature = \"/TEMP\"\n",
+    "    )\n",
     ")\n",
     "forcing"
    ]
@@ -156,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6faa85a0",
+   "id": "44507283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0278b57f",
+   "id": "fc2bdf39",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a964e937",
+   "id": "69f96939",
    "metadata": {
     "tags": []
    },
@@ -251,14 +257,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8d94b71d",
+   "id": "3229662f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_181913/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_181913'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210601_114152/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210601_114152'))"
       ]
      },
      "execution_count": 7,
@@ -271,78 +277,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c1f5e595",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('inputmapstacks',\n",
-       "  {'Precipitation': '/P',\n",
-       "   'EvapoTranspiration': '/PET',\n",
-       "   'Temperature': '/TEMP',\n",
-       "   'Inflow': '/inmaps/IF'}),\n",
-       " ('modelparameters', {}),\n",
-       " ('run',\n",
-       "  {'starttime': '1995-01-31 00:00:00 GMT',\n",
-       "   'endtime': '1995-02-27 00:00:00 GMT',\n",
-       "   'timestepsecs': '86400',\n",
-       "   'reinit': '1'}),\n",
-       " ('model',\n",
-       "  {'modeltype': 'sbm',\n",
-       "   'AnnualDischarge': '2290',\n",
-       "   'Alpha': '120',\n",
-       "   'ModelSnow': '0',\n",
-       "   'ScalarInput': '0',\n",
-       "   'InterpolationMethod': 'inv',\n",
-       "   'WIMaxScale': '0.8',\n",
-       "   'Tslice': '1',\n",
-       "   'UpdMaxDist': '300000.0',\n",
-       "   'origTopogLateral': '1'}),\n",
-       " ('misc', {}),\n",
-       " ('framework',\n",
-       "  {'netcdfoutput': 'outmaps.nc',\n",
-       "   'netcdfinput': 'test_forcing_data.nc',\n",
-       "   'netcdfwritebuffer': '10',\n",
-       "   'netcdf_least_significant_digit': '2'}),\n",
-       " ('layout', {'sizeinmetres': '0'}),\n",
-       " ('outputmaps',\n",
-       "  {'self.Inflow': 'iflow',\n",
-       "   'self.RiverRunoff': 'run',\n",
-       "   'self.InwaterMM': 'iwm',\n",
-       "   'self.PotenEvap': 'PET',\n",
-       "   'self.Precipitation': 'P'}),\n",
-       " ('summary', {'self.MaxLeakage': 'MaxLeakage.map'}),\n",
-       " ('summary_sum', {'self.Precipitation': 'Sumprecip.map'}),\n",
-       " ('summary_max', {'self.Precipitation': 'maxprecip.map'}),\n",
-       " ('summary_min', {}),\n",
-       " ('summary_avg', {'self.Precipitation': 'avgprecip.map'}),\n",
-       " ('outputcsv_0',\n",
-       "  {'samplemap': 'staticmaps/wflow_landuse.map',\n",
-       "   'self.Transfer': 'tra_lu.csv'}),\n",
-       " ('outputtss_0',\n",
-       "  {'samplemap': 'staticmaps/wflow_gauges.map',\n",
-       "   'self.RiverRunoff': 'run.tss',\n",
-       "   'self.WaterLevelR': 'lev.tss'}),\n",
-       " ('outputtss_1',\n",
-       "  {'samplemap': 'staticmaps/wflow_gauges.map', 'self.ActLeakage': 'lek.tss'}),\n",
-       " ('API', {'RiverRunoff': '2, m^3/s'})]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.parameters"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "7cc9e59e",
+   "id": "ea4903b2",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -351,13 +287,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "93035ca5",
+   "id": "1f3e4e2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_181913/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210601_114152/wflow_ewatercycle.ini')"
       ]
      },
      "execution_count": 9,
@@ -372,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85e297f5",
+   "id": "3bdf8239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "85234ff9",
+   "id": "b3600b11",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bf0453bf",
+   "id": "35347682",
    "metadata": {
     "tags": []
    },
@@ -776,13 +712,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-0dab7ff7-3e1b-49dd-a7b8-1405d83804a0' class='xr-array-in' type='checkbox' checked><label for='section-0dab7ff7-3e1b-49dd-a7b8-1405d83804a0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-90fcee7b-579b-4294-8fd1-af3a1800a8e0' class='xr-array-in' type='checkbox' checked><label for='section-90fcee7b-579b-4294-8fd1-af3a1800a8e0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-ff687249-7804-4469-998f-592c99d4f9c3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ff687249-7804-4469-998f-592c99d4f9c3' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-48f05819-d4a4-4928-82ba-148d867bb5cf' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-48f05819-d4a4-4928-82ba-148d867bb5cf' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4943efa9-623a-4377-81cb-3defe160258a' class='xr-var-data-in' type='checkbox'><label for='data-4943efa9-623a-4377-81cb-3defe160258a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-8c896a55-45fa-41c0-b534-e2c7aab104f0' class='xr-section-summary-in' type='checkbox'  checked><label for='section-8c896a55-45fa-41c0-b534-e2c7aab104f0' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-15da7038-c1ae-40cc-81b3-899864f9c885' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-15da7038-c1ae-40cc-81b3-899864f9c885' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-979932e8-0d05-4348-a671-859fb16d2656' class='xr-var-data-in' type='checkbox'><label for='data-979932e8-0d05-4348-a671-859fb16d2656' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -813,7 +749,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-374ee0ac-7cc1-4d7e-8337-4f78ca5bcda0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-374ee0ac-7cc1-4d7e-8337-4f78ca5bcda0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c55a1d91-c1a7-4bc1-9a52-3cb889a29323' class='xr-var-data-in' type='checkbox'><label for='data-c55a1d91-c1a7-4bc1-9a52-3cb889a29323' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-33849ffd-9ad5-466c-a232-649eba30245c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-33849ffd-9ad5-466c-a232-649eba30245c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-fc4f3e65-14f6-4dd5-a1a8-28926c050d80' class='xr-var-data-in' type='checkbox'><label for='data-fc4f3e65-14f6-4dd5-a1a8-28926c050d80' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -841,7 +777,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-823f2fc2-97b6-43fb-b713-9a0b90ae0b72' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-823f2fc2-97b6-43fb-b713-9a0b90ae0b72' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-511bbb35-5cac-4584-9e97-7080a4489d1b' class='xr-var-data-in' type='checkbox'><label for='data-511bbb35-5cac-4584-9e97-7080a4489d1b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-377ca19f-52d1-4fe2-8600-2deb29201bb6' class='xr-section-summary-in' type='checkbox'  checked><label for='section-377ca19f-52d1-4fe2-8600-2deb29201bb6' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-f2d76a9a-0e0d-4c0e-9e45-d5f7920cb0a5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f2d76a9a-0e0d-4c0e-9e45-d5f7920cb0a5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-95c80a9b-c132-415c-af14-600b311f08af' class='xr-var-data-in' type='checkbox'><label for='data-95c80a9b-c132-415c-af14-600b311f08af' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1bea35ef-2423-4826-8f3b-69c28bc4fe9c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1bea35ef-2423-4826-8f3b-69c28bc4fe9c' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -872,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0ce05438",
+   "id": "6bffb1ba",
    "metadata": {},
    "outputs": [
     {
@@ -919,13 +855,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d3c45ba",
+   "id": "e33954c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fc115e0c9a0>"
+       "<matplotlib.collections.QuadMesh at 0x7ff646280f10>"
       ]
      },
      "execution_count": 14,
@@ -953,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8cf3c18c",
+   "id": "4bb22650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ab107c7b",
+   "id": "a9384ae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5db7eeec",
+   "id": "cffac276",
    "metadata": {},
    "outputs": [],
    "source": []
