fix typo in heading 3 in the notebook

--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -133,7 +133,7 @@
    "id": "4bf3aebd",
    "metadata": {},
    "source": [
-    "### 3. Setting uip the model"
+    "### 3. Setting up the model"
    ]
   },
   {
