Implement new forcing in marrmot class (#95)

--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -34,13 +34,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8564493",
+   "id": "e416e470-0501-4e3a-9fd0-ea152c439826",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ewatercycle.parametersetdb.datafiles import SubversionCopier\n",
     "copier = SubversionCopier('https://github.com/wknoben/MARRMoT/trunk/BMI/Config/BMI_testcase_m01_BuffaloRiver_TN_USA.mat')\n",
     "copier.save(forcing_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5ff79544-874d-4a74-8bda-e9d0c1d98def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ewatercycle.forcing import load_foreign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c03cabb6-9cb3-4da3-ac96-732ba870d460",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MarrmotForcing(start_time='1989-01-01T00:00:00Z', end_time='1992-12-31T00:00:00Z', directory='.', shape=None, forcing_file='BMI_testcase_m01_BuffaloRiver_TN_USA.mat')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forcing = load_foreign('marrmot',\n",
+    "                        directory='.',\n",
+    "                        start_time='1989-01-01T00:00:00Z',\n",
+    "                        end_time='1992-12-31T00:00:00Z',\n",
+    "                        forcing_info={\n",
+    "                            'forcing_file': 'BMI_testcase_m01_BuffaloRiver_TN_USA.mat'\n",
+    "                        })\n",
+    "forcing"
    ]
   },
   {
@@ -57,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "069ee59d",
    "metadata": {},
    "outputs": [],
@@ -68,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "a3203d39",
    "metadata": {},
    "outputs": [],
@@ -77,13 +115,12 @@
     "    yaml.dump({\n",
     "        'container_engine': 'docker', # or singularity\n",
     "        'output_dir': './', # the directory where the model work_dir will be created\n",
-    "        'singularity_dir': 'null',\n",
     "    }, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "5787b59b",
    "metadata": {},
    "outputs": [],
@@ -96,12 +133,12 @@
    "id": "4bf3aebd",
    "metadata": {},
    "source": [
-    "### 3. Setting uip the model"
+    "### 3. Setting up the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a47a6f73",
    "metadata": {},
    "outputs": [],
@@ -111,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "a46d2892",
    "metadata": {},
    "outputs": [
@@ -121,7 +158,7 @@
        "['2020.11']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,29 +169,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "c4bcdad8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f7b8e7a99a0>"
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f89d9097220>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing_file)\n",
+    "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing)\n",
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "4185acc3",
    "metadata": {},
    "outputs": [
@@ -165,12 +202,13 @@
        " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
        "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
-       " ('start time', '1989-01-01T00:00:00+00:00'),\n",
-       " ('end time', '1992-12-31T00:00:00+00:00'),\n",
-       " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
+       " ('start time', '1989-01-01T00:00:00Z'),\n",
+       " ('end time', '1992-12-31T00:00:00Z'),\n",
+       " ('forcing_file',\n",
+       "  '/home/sarah/GitHub/ewatercycle/examples/BMI_testcase_m01_BuffaloRiver_TN_USA.mat')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,18 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "5b41e8f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210518_163333/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210518_163333'))"
+       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210602_132225/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210602_132225'))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,14 +238,14 @@
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=1234.0,\n",
-    "    end_time = \"1989-01-10T00:00:00+00:00\",\n",
+    "    end_time = \"1989-01-10T00:00:00Z\",\n",
     ")\n",
     "cfg_file, cfg_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "925fd7bd",
    "metadata": {},
    "outputs": [
@@ -218,12 +256,13 @@
        " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
        "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
-       " ('start time', '1989-01-01T00:00:00+00:00'),\n",
-       " ('end time', '1989-01-10T00:00:00+00:00'),\n",
-       " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
+       " ('start time', '1989-01-01T00:00:00Z'),\n",
+       " ('end time', '1989-01-10T00:00:00Z'),\n",
+       " ('forcing_file',\n",
+       "  '/home/sarah/GitHub/ewatercycle/examples/BMI_testcase_m01_BuffaloRiver_TN_USA.mat')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8476fe8a",
    "metadata": {},
    "outputs": [],
@@ -244,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "516620d3",
    "metadata": {},
    "outputs": [],
@@ -254,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "9e12e910",
    "metadata": {},
    "outputs": [
@@ -273,7 +312,7 @@
        " 'wb')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "c7302682",
    "metadata": {},
    "outputs": [
@@ -294,7 +333,7 @@
        "array([0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "769635d6",
    "metadata": {},
    "outputs": [
@@ -670,7 +709,7 @@
        "  * latitude   (latitude) float64 35.29\n",
        "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
-       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-23f2099f-6513-4a1f-be8e-0a4699fb119e' class='xr-array-in' type='checkbox' checked><label for='section-23f2099f-6513-4a1f-be8e-0a4699fb119e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array([[0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-abf2a8ab-dc9f-4912-bc0f-bb210ba3ae4a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-abf2a8ab-dc9f-4912-bc0f-bb210ba3ae4a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-c4717736-f615-4184-97b3-ff3525c4cbb1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c4717736-f615-4184-97b3-ff3525c4cbb1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-00050a2e-824d-41ea-8985-b024e7b4a4c0' class='xr-var-data-in' type='checkbox'><label for='data-00050a2e-824d-41ea-8985-b024e7b4a4c0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-18d40141-ae0a-480b-9eaa-2b708301994c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-18d40141-ae0a-480b-9eaa-2b708301994c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a1b7bb29-d5aa-49ed-9c6a-43798ae29a44' class='xr-var-data-in' type='checkbox'><label for='data-a1b7bb29-d5aa-49ed-9c6a-43798ae29a44' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-49bb533c-0e23-44b2-abde-469653b649cf' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-49bb533c-0e23-44b2-abde-469653b649cf' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5fc3cf88-6c7d-4226-b2c1-a1ef73a9cba1' class='xr-var-data-in' type='checkbox'><label for='data-5fc3cf88-6c7d-4226-b2c1-a1ef73a9cba1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3cd44d2d-916f-46dd-8f57-e86e1aff0f70' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3cd44d2d-916f-46dd-8f57-e86e1aff0f70' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
+       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-518a579b-d23f-428c-86f9-cbf9c9a1729a' class='xr-array-in' type='checkbox' checked><label for='section-518a579b-d23f-428c-86f9-cbf9c9a1729a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array([[0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-67d557ca-eee5-49f3-8965-e8ffec67a75b' class='xr-section-summary-in' type='checkbox'  checked><label for='section-67d557ca-eee5-49f3-8965-e8ffec67a75b' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-dd1812e3-fdc4-42b8-a340-c2f0d64d31df' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-dd1812e3-fdc4-42b8-a340-c2f0d64d31df' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0459f1f1-2b22-4148-80b6-cd68beadeafc' class='xr-var-data-in' type='checkbox'><label for='data-0459f1f1-2b22-4148-80b6-cd68beadeafc' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-576da174-a2f5-4f5d-b525-da553551ab56' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-576da174-a2f5-4f5d-b525-da553551ab56' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e3e5967f-04b6-4f22-b5ea-e8648e233547' class='xr-var-data-in' type='checkbox'><label for='data-e3e5967f-04b6-4f22-b5ea-e8648e233547' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-8cdeccf7-81e4-480c-b991-a3c9102f25ff' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8cdeccf7-81e4-480c-b991-a3c9102f25ff' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-be25534c-325a-4ee7-a9de-8bc90861888a' class='xr-var-data-in' type='checkbox'><label for='data-be25534c-325a-4ee7-a9de-8bc90861888a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7b15bb11-2e7c-42ca-b9ac-a46f6ecf3b76' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7b15bb11-2e7c-42ca-b9ac-a46f6ecf3b76' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'flux_out_Q' (latitude: 1, longitude: 1)>\n",
@@ -683,7 +722,7 @@
        "    units:    mm day"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "9ef4e3c5-1a0e-403a-af7b-cbb1354c4eb0",
    "metadata": {},
    "outputs": [
@@ -721,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "b0585b27-c88b-4f8a-8bbe-18dba5cef444",
    "metadata": {},
    "outputs": [],
@@ -731,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "1a3f33b0",
    "metadata": {},
    "outputs": [],
